# wtf-lang

./: .gitignore  Cargo.toml  README.md  compiler_plugins.md  example.wtf  language_tour.md  test.wtf  test_errors.wtf  test_record_casting.wtf  todos.md
.github/workflows/: ci.yml  examples.yml  tests.yml
src/: ast.rs  lexer.rs  main.rs  parser.rs
test-lsp/: Cargo.toml
test-lsp/src/: main.rs
wtf-ast/: Cargo.toml
wtf-ast/src/: ast.rs  display.rs  lib.rs
wtf-compiler/: Cargo.toml  get-docker.sh
wtf-compiler/examples/: array.wtf  conditional.wtf  early_return.wtf  enum.wtf  for.wtf  logic.wtf  loop.wtf  member_access.wtf  numeric.wtf  optional.wtf  overload.wtf  record.wtf  record_downcasting.wtf  string.wtf  tests.wtf  type_check.wtf  ufcs.wtf
wtf-compiler/src/: main.rs
wtf-encode/: Cargo.toml  main.wtf
wtf-encode/src/: lib.rs  main.rs
wtf-error/: Cargo.toml
wtf-error/src/: lib.rs
wtf-format/: Cargo.toml
wtf-format/examples/: array.wtf  loop.wtf  overload.wtf  simple.wtf
wtf-format/src/: lib.rs  main.rs
wtf-hir/: Cargo.toml
wtf-hir/src/: builtin.rs  compiler.rs  lib.rs  type_.rs  visible.rs
wtf-lsp/: ARCHITECTURE.md  Cargo.toml  README.md
wtf-lsp/docs/: README.md  code_actions.md  completion.md  diagnostics.md  testing.md  type_inference.md
wtf-lsp/src/: code_actions.rs  completion.rs  diagnostics.rs  lib.rs  lib_old.rs  main.rs  type_inference.rs
wtf-lsp/tests/: additional_tests.rs  completion_test.rs
wtf-mir/: Cargo.toml
wtf-mir/src/: builtin.rs  lib.rs
wtf-parser/: Cargo.toml
wtf-tokens/: Cargo.toml
wtf-wasm/: Cargo.toml
(+19 files in other folders)
