[package]
name = "wtf-compiler"
authors = ["Marcel Garus", "Antonius Naumann"]
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
wtf-ast = { path = "../wtf-ast" }
wtf-parser = { path = "../wtf-parser" }
wtf-hir = { path = "../wtf-hir" }
# wtf-encode = { path = "../wtf-encode" }
wasmparser = "0.222.0"
wasmtime = "28.0.0"
